Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-49126

It is not possible to get command timings not bound to a bucket

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.1.0
    • 5.1.1, 5.1.2, 5.1.3, 5.5.0, 5.5.1, 5.5.2, 5.5.3, 5.5.4, 5.5.5, 5.5.6, 5.5.5-MP2, 6.0.0, 6.0.1, 6.0.2, 6.0.3, 6.0.4, 6.0.5, 6.5.1, 6.6.0, 6.6.1, 6.6.2, 6.5.2, 6.5.0, 6.6.3, 7.0.0, 7.0.1, 7.0.2, 7.1.0
    • memcached
    • Triaged
    • 1
    • Yes

    Description

      When we added the possibility to aggregate command timings across buckets we also removed the ability to fetch the statisticks from the "no bucket" where we store all command timings to commands not belonging to a given bucket (like SASL_AUTH etc)

      Attachments

        For Gerrit Dashboard: MB-49126
        # Subject Branch Project Status CR V

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty