MB-49126: Allow for reading command timings from no-bucket

Previously we could only request command timings for commands
executed in a bucket context, but some commands execute outside
a bucket context (before the user selected the active bucket):
SASL_LIST_MECH, CREATE_BUCKET, DELETE_BUCKET for instance.

This patch allows for reading the aggregated stats in
"no bucket" for users posessing the Stats privilege.

Change-Id: Iae0b508766f31ff22f5f33bd2d85cc9bda05e8e2
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/169122
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>